--- a/Mp3Player/mainwindow.ui
+++ b/Mp3Player/mainwindow.ui
@@ -283,6 +283,12 @@
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
       </spacer>
      </item>
     </layout>
@@ -358,7 +364,6 @@
    <zorder>dial</zorder>
    <zorder>progressBar</zorder>
    <zorder>status</zorder>
-   <zorder>mute</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
